--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Recruit finance</title>
 
     <!-- Bootstrap -->
-    <link href="css/rf-style.css" rel="stylesheet">
+    <link href="https://github.com/rakeshmudaliar10/web-developer-portfolio/blob/master/css/RF-STYLE.css" rel="stylesheet">
 
 
     <link rel="shortcut icon" href="favicon.ico"/>
