--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Recruit finance</title>
 
     <!-- Bootstrap -->
-    <link href="/css/RF-STYLE.css" rel="stylesheet">
+    <link href="css/RF-STYLE.css" rel="stylesheet">
 
 
     <link rel="shortcut icon" href="favicon.ico"/>
