--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                         <!-- Collect the nav links, forms, and other content for toggling -->
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <p class="text-right"> <span class="hidden-xs"> for placement assistance call:</span><span class='h4'> +91 98864 35827 </span></p>
+                        <p class="text-right"> <span class="hidden-xs"> for placement assistance call:</span><span class='h4'>  <a href="tel:9740749392">+91 9740749392</a> </span></p>
                           <ul class="nav navbar-nav navbar-right">
                             <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
                             <li><a href="#">About us</a></li>
